Forms clear on submission

--- a/assets/scripts/templates/recipeListing.handlebars
+++ b/assets/scripts/templates/recipeListing.handlebars
@@ -10,7 +10,7 @@
     <h6>Dry Hop: {{recipe.dryHop}}</h6>
     <h6>Yeast: {{recipe.yeast}}</h6>
     <h6>Directions: {{recipe.directions}}</h6>
-    <h6>{{#if recipe.note}}
+    <h6>Notes: {{#if recipe.note}}
         {{recipe.note}}
       {{else}}
         No notes yet.
