Sign-in form layout updated
Create new layout for sign-in
Also added a footer

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -4,7 +4,7 @@ body {
   margin: 30px;
 }
 
-.test-col {
+.unauth-col {
   margin: 10px;
 }
 
@@ -15,4 +15,9 @@ body {
 h1 {
   text-align: center;
   margin: 40px;
+}
+
+footer {
+  text-align: center;
+  margin: 100px
 }
