--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,7 +1,14 @@
 @import '~bootstrap/scss/bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@600&display=swap');
 
 body {
+  background-color: #E49A27;
   margin: 30px;
+}
+
+.btn {
+  background-color: white;
+  color: black;
 }
 
 .unauth-col {
@@ -12,12 +19,30 @@ body {
   display: none;
 }
 
+#sign-up {
+  width: 500px;
+}
+
+#sign-in {
+  width: 500px;
+}
+
 h1 {
+  color: white;
+  font-family: 'Lemonada', cursive;
+  font-size: 60px;
   text-align: center;
   margin: 40px;
 }
 
+label {
+  color: white;
+  font-family: 'Lemonada', cursive;
+  font-size: 30px;
+}
+
 footer {
   text-align: center;
-  margin: 100px
+  margin: 100px;
+  font-size: 10px;
 }
