--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 body {
   background-color: #E49A27;
@@ -25,6 +26,11 @@ body {
 
 #sign-in {
   width: 500px;
+}
+
+.message {
+  color: white;
+  font-family: 'Lobster', cursive;
 }
 
 h1 {
