--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -33,6 +33,10 @@ body {
   margin: 60px 0px 30px 0px;
 }
 
+// .recipe-input {
+//   border: solid black;
+// }
+
 .input-step {
   color: #F6E7C8;
   font-family: 'Lemonada', cursive;
