Change Password hidden until clicked
Only show change password input fields when button is clicked.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -29,7 +29,15 @@ body {
   width: 500px;
 }
 
+.signout-btn {
+  border: solid black;
+}
+
 #create-recipe {
+  margin: 60px 0px 30px 0px;
+}
+
+#update-recipe {
   margin: 60px 0px 30px 0px;
 }
 
