--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -70,6 +70,16 @@ h1 {
   margin: 40px;
 }
 
+.recipe {
+  font-family: 'Lemonada', cursive;
+  text-align: center;
+  margin: 10px;
+}
+
+.recipe-content {
+  color:#76726A;
+}
+
 label {
   color: white;
   font-family: 'Lemonada', cursive;
