Changed ui message
Message now says here's your recipe

--- a/assets/scripts/templates/showRecipe.handlebars
+++ b/assets/scripts/templates/showRecipe.handlebars
@@ -1,6 +1,6 @@
   <!-- {{log recipe}} -->
   <section class="recipe" data-id="{{recipe._id}}">
-    <h4 class="message">You created a new recipe!</h4>
+    <h4 class="message">Here's your recipe</h4>
     <h4 class="recipe-content">Recipe:</h4>
     <p id="recipeName">{{recipe.beerName}}</p>
     <h5 class="recipe-content">Recipe ID:</h5>
